force-app/main/default/objects/Candidate_History__c/Candidate_History__c.object-meta.xml
<CustomObject>
    <label>Candidate History</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Candidate History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>