force-app/main/default/objects/Candidate_History__c/fields/changed_By__c.field-meta.xml
<CustomField>
    <fullName>changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidate_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>