force-app/main/default/objects/Candidate_History__c/fields/Changed_Field__c.field-meta.xml
<CustomField>
    <fullName>Changed_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Changed Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>